- content helper renamed as view.php and all "content_" function prefix changed as "view_"
- some impromevents for profiler class, added php and php5 libraries colourful track support.
- added session helper driver extend support, added to all helpers extend support
- added i_request() function to base input helper.
- session function all_userdata changed as sess_alldata()
- changed view helper view_set_folder() 'app_view' switch case string as 'view_app'
- removed css() function array support from head tag helper
- loaded_helper() to common.php file, changed bootstrap.php and ob_set_headers func, added loaded helpers track support to profiler class.
- add config load and lang load track support for profiler class
- renamed lang_item() function as lang() in lang.php, updated all libraries.
- added auto_source_url(false); function to config class.
//-----------------------------------------------------------------------------


@todo .. upload class security fix
@todo .. depreciate ob::instance() function use this();
=======
@todo .. change profiler class like log function like this

in common.php

function profiler_set($type, key, msg) // set
{
    $ssc = ssc::instance();

    $ssc->profiler_var[$type][$key] = $msg;
}

profiler_get($type, $key); // grab

log_message() // in common.php file
{
    profiler_log('key', msg);    add this line..
}

@todo .. change .htaccess in User Guide like this
=======
DirectoryIndex index.php
RewriteEngine on
RewriteCond $1 !^(index\.php|sources|favicon\.ico|robots\.txt)
RewriteCond %{REQUEST_FILENAME} !-f
RewriteCond %{REQUEST_FILENAME} !-d
RewriteRule ^(.*)$ ./index.php/$1 [L,QSA]

@next version todo .. datamapper class
@next version todo .. add set_callback('function', param1, param1..) instead of set_rules('|callback_function')
@next version todo .. pager class         
@next version todo .. firewall class (integer, string validate for requests, login attempts for captcha) 