@@ -8,13 +8,15 @@ Class Start extends Controller {
         parent::__global();
         
         $this->output->profiler();
-        
     }                                      
     
     public function index()
     {  
         $this->title = 'Welcome to Obullo Framework !';        
         $data['var'] = 'This page generated by Obullo Framework.';
+        
+        table::instance();
+        form_validate::instance();
                          
         $this->body  = view('view_welcome', $data);
         view_app('view_base_layout');
